# TRE

./: CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/src/: default.frag  default.vert
include/: Application.hpp  Context.hpp  Device.hpp  Model.hpp  Object.hpp  Pipeline.hpp  Renderer.hpp  Swapchain.hpp  Window.hpp
src/: Application.cpp  Context.cpp  Device.cpp  Model.cpp  Pipeline.cpp  Renderer.cpp  Swapchain.cpp  Window.cpp  main.cpp
